src/objects/Exception__c.object
<CustomObject>
    <fields>
        <fullName>Exception_Id__c</fullName>
        <label>Exception ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line Number</description>
        <inlineHelpText>Line Number</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumDml__c</fullName>
        <label>Number of Rows Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation_Id__c</fullName>
        <label>Organisation ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_String__c</fullName>
        <label>Stack Trace String</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Of_Occurence__c</fullName>
        <label>Time Of Occurence</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>